--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,9 +16,15 @@
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
+    "@particle-network/aa": "^1.3.3",
+    "@particle-network/auth": "^1.3.1",
+    "@particle-network/provider": "^1.3.2",
+    "@particle-network/rainbowkit-ext": "^1.3.2",
+    "@particle-network/rn-auth": "^1.3.10",
     "@rainbow-me/rainbowkit": "1.3.5",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
+    "@web3uikit/core": "^1.1.5",
     "blo": "^1.0.1",
     "daisyui": "4.5.0",
     "next": "^14.0.4",
@@ -31,6 +37,7 @@
     "react-hot-toast": "^2.4.0",
     "use-debounce": "^8.0.4",
     "usehooks-ts": "^2.13.0",
+    "userop": "^0.3.8",
     "viem": "1.19.9",
     "wagmi": "1.4.12",
     "zustand": "^4.1.2"
